<resources>
    <string name="app_name">Inventory App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_username_label">Username</string>
    <string name="sign_in_password_label">Password</string>
    <string name="sign_in_sign_in_button_text">Sign In</string>
    <string name="sign_in_register_button_text">Register</string>
    <string name="sign_in_title_text">Login to Your Account</string>
    <string name="inventory_title_text">My Inventory</string>
    <string name="inventory_item_name_column_header">Name</string>
    <string name="inventory_item_description_column_header">Description</string>
    <string name="inventory_item_quantity_column_header">QTY.</string>
    <string name="inventory_item_sample_1_name">Rugged Trail Boots</string>
    <string name="inventory_item_sample_1_description">Waterproof, Tough, Supportive</string>
    <string name="inventory_item_sample_1_quantity">18</string>
    <string name="inventory_item_sample_2_name">Steel Hammer Dril</string>
    <string name="inventory_item_sample_2_description">Powerful, Variable-Speed, Heavy-Duty</string>
    <string name="inventory_item_sample_2_quantity">10</string>
    <string name="inventory_item_sample_3_name">Survival Multi-Tool</string>
    <string name="inventory_item_sample_3_description">Versatile, Compact, Durable</string>
    <string name="inventory_item_sample_3_quantity">35</string>
    <string name="inventory_item_sample_4_name">Mountaineer Flannel Shirt</string>
    <string name="inventory_item_sample_4_description">Warm, Heavy-Duty, Comfortable</string>
    <string name="inventory_item_sample_4_quantity">22</string>
    <string name="inventory_item_sample_5_name">Blacksmith Leather Apron</string>
    <string name="inventory_item_sample_5_description">Handcrafted, Fire-Resistant, Protective</string>
    <string name="inventory_item_sample_5_quantity">5</string>
    <string name="inventory_item_sample_6_name">Titanium Chronograph Watch</string>
    <string name="inventory_item_sample_6_description">Robust, Precision, Stylish</string>
    <string name="inventory_item_sample_6_quantity">12</string>
    <string name="settings_title">Settings</string>
    <string name="add_item_item_name_label">Item Name</string>
    <string name="add_item_item_description_label">Description</string>
    <string name="add_item_item_quantity_label">Quantity</string>
    <string name="add_item_button_text">Add</string>
    <string name="edit_item_item_name_label">Item Name</string>
    <string name="edit_item_item_description_label">Description</string>
    <string name="edit_item_item_quantity_label">Quantity</string>
    <string name="edit_item_button_text">Save</string>
    <string name="settings_notifications">Enable SMS Notification</string>
    <string name="settings_darkmode">Enable dark mode</string>
    <string name="title_sign_in">Login</string>
    <string name="title_my_inventory">My Inventory</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_edit_item">Edit Item</string>
    <string name="profile_title_text">Profile</string>
    <string name="title_profile">Profile</string>
    <string name="register_title_text">User Registration</string>
    <string name="register_user_name_label">Username</string>
    <string name="register_email_label">Email</string>
    <string name="register_password_label">Password</string>
    <string name="register_password_confirm_label">Confirm Password</string>
    <string name="register_first_name_label">First Name</string>
    <string name="register_last_name_label">Last Name</string>
    <string name="register_register_button">Register</string>
    <string name="sms_number_label">Enter telephone number for SMS alerts.</string>
    <string name="settings_phone_number_label">SMS Mobile Number</string>
    <string name="add_item_alert_quantity_label">Quantity threshold for SMS Alert</string>
    <string name="edit_item_alert_quantity_label">Quantity threshold for SMS Alert</string>


</resources>